--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="notificacoesPush">Notificações Push</string>
     <string name="NotificaoesEmail">Notificações E-Mail</string>
     <string name="salvar">Salvar</string>
+    <string name="dedicatoria"></string>
 	
 <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
