--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -13,9 +13,11 @@
     <string name="email">E-Mail</string>
     <string name="data_nascimento">Data de Nascimento</string>
     <string name="notificacoes_push">Notificações Push</string>
-    <string name="notificacoes_email">Notificações E-Mail</string><string name="cancelar">Cancelar</string>
+    <string name="notificacoes_email">Notificações E-Mail</string>
+    <string name="cancelar">Cancelar</string>
     <string name="salvar">Salvar</string>
     <string name="dedicatoria"></string>
+    <string name="principalapto">Apto a doar</string>    
 	
 <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
@@ -57,6 +59,5 @@
         <item>O-</item>
     </string-array>
     <string name="alterardadostitulo">Dados Pessoais</string>
-    
     
 </resources>
