Alterações na parte de login

--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="cadastroLink">Registre-se agora!</string>
     <string name="registrartitulo">Registre-se e ajude a salvar vidas</string>
     <string name="registrarsenha">Senha</string>
+    <string name="loginerro">Login e/ou senha incorreta</string>
 </resources>
