Criado a interface de abrir solicitação, junto com o seu xml,. java, adcionado o array para quantidade de solicitações na classe string. (reverted from commit 1eb6eb190725c3ebc6d7e75d5de0ec9bdf499beb)

--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -7,9 +7,9 @@
 	<string name="aboutMe">Aplicação desenvolvida como trabalho de conclusão da Universidade São Judas Tadeu.\nDisponibilizado gratuitamente para uso com o intuito de ajudar as pessoas.\nPossivelmente se houver adesão a ferramenta adicionaremos novas cidades de acordo com a demanda e tempo.</string>
 	<string name="signature">Atenciosamente,\nGrupo Nothing Else Matters.</string>	
     <string name="configuracao">Alterar Dados</string>
-    <string name="tipo_sanguineo">Tipo Sanguíneo</string>
+    <string name="tipo_sanguineo">Tipo Sanguineo</string>
     <string name="nome">Nome</string>
-    <string name="tpSanguineo">Tipo Sanguíneo</string>
+    <string name="tpSanguineo">Tipo Sanguineo</string>
     <string name="email">E-Mail</string>
     <string name="data_nascimento">Data de Nascimento</string>
     <string name="notificacoes_push">Notificações Push</string>
@@ -20,7 +20,8 @@
     <string name="principalapto">Apto a doar</string>
     <string name="google_play_services_version">4323000</string>   
     <string name="menuAbout">Sobre</string>    
-	
+    <string name="ultimasolicitacoes">Solicitações abertas</string>    
+    
 <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
     
@@ -60,41 +61,6 @@
         <item>O</item>
         <item>O-</item>
     </string-array>
-    
-   <string-array name="quant_doaco">
-        <item>01</item>
-        <item>02</item>
-        <item>03</item>
-        <item>04</item>
-        <item>05</item>
-        <item>06</item>
-        <item>07</item>
-        <item>08</item>
-        <item>09</item>
-        <item>10</item>
-        <item>11</item>
-        <item>12</item>
-        <item>13</item>
-        <item>14</item>
-        <item>15</item>
-        <item>16</item>
-        <item>17</item>
-        <item>18</item>
-        <item>19</item>
-        <item>20</item>
-        <item>21</item>
-        <item>22</item>
-        <item>23</item>
-        <item>24</item>
-        <item>25</item>
-        <item>26</item>
-        <item>27</item>
-        <item>28</item>
-        <item>29</item>
-        <item>30</item>
-    </string-array>
-    
-    
     <string name="alterardadostitulo">Dados Pessoais</string>
     <string name="mensagemLogin">Seja bem-vindo ao DoarSP!</string>
     <string name="login">Login:</string>
@@ -103,14 +69,13 @@
     <string name="cadastro">Ainda não possui cadastro?</string>
     <string name="cadastroLink">Registre-se agora!</string>
     <string name="registrartitulo">Registre-se e ajude a salvar vidas</string>
-    <string name ="registrarsolicitao">Solicitar Doadores</string>
-    <string name = "paciente"> Nome do paciente</string>
     <string name="registrarsenha">Senha</string>
-    <string name="postoHemocentro">Postos de doação </string>
-    <string name="idade">Idade </string>
     <string name="loginerro">Login e/ou senha incorreta</string>
-    <string name="ConsultarSolicitacao">Consultar solicitação</string>
-    <string name="CadastrarQuantiadDoacao">Quantidade de doações necessitada </string>
-    
-
+    <!--  Tela de BuscarDoacoes -->
+   	<string name="bd_feed">Solicitações</string>
+   	<string name="bd_mapa">Buscar no Mapa</string>
+   	<string name="filtro">Filtro</string>
+   	<string name="quantSolicitacao0">Que ótimo! Não existe solicitações. :)</string>
+   	<string name="quantSolicitacao1">Apenas uma solicitação.</string>
+   	<string name="quantSolicitacaoN">Qtd. de Solicitações:</string>
 </resources>
