Classes de comunicação com Webservice e mais um monte de alterações

--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -32,7 +32,7 @@
         <item >Abrir Solicitação</item>
         <item >Mural</item>
         <item >Postos de Doação</item>
-        <item >Informações</item>
+        <!-- <item >Informações</item> -->
         <item >Alterar Dados</item>
     </string-array>
      
