Conexão com WS funcionando

--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -20,7 +20,8 @@
     <string name="principalapto">Apto a doar</string>
     <string name="google_play_services_version">4323000</string>   
     <string name="menuAbout">Sobre</string>    
-    <string name="ultimasolicitacoes">Solicitações abertas</string>    
+    <string name="ultimasolicitacoes">Solicitações abertas</string> 
+    <string name="username">Nome de usuário</string>    
     
 <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
