--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="nomepaciente">Nome do paciente</string>   
     <string name="solicitacaohemocentro">Selecione um hemocentro para doação</string>   
     <string name="solicitacaocomentario">Use o espaço abaixo para agradecer os doadores :)</string>   
+    <string name="buscarlistahemocentrostv">Selecione um dos hemocentros abaixo</string>   
+    <string name="buscarlistasolicitacoesstv">Ajude a salvar uma vida :)</string>   
     
 <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
