--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -43,7 +43,9 @@
         <item >Mural</item>
         <item >Postos de Doação</item>
         <!-- <item >Informações</item> -->
-        <item >Alterar Dados</item>
+        <item >Alterar Dados</item>     
+        <item>Ranking</item>
+        
     </string-array>
      
     <!-- Nav Drawer List Item Icons -->
@@ -56,6 +58,8 @@
         <item>@drawable/ic_postos</item>
         <item>@drawable/ic_info</item>
         <item>@drawable/ic_alterar</item>
+        <item>@drawable/ic_ranking</item>
+        
     </array>
      
     <!-- Content Description -->
