--- a/doarSP/res/values/strings.xml
+++ b/doarSP/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="app_name">DoarSP</string>
     <string name="action_settings">Settings</string>
     <string name="version">Beta</string>
-	<string name="aboutMe">Aplicação desenvolvida como trabalho de conclusão da Universidade São Judas Tadeu.\nDisponibilizado gratuitamente para uso com o intuito de ajudar as pessoas.\nPossivelmente se houver adesão a ferramenta adicionaremos novas cidades de acordo com a demanda e tempo.</string>
-	<string name="signature">Atenciosamente,\nGrupo Nothing Else Matters.</string>	
+	<string name="aboutMe">Aplicação desenvolvida como trabalho de graduação do curso de Sistemas de Informação da Universidade São Judas Tadeu. Disponibilizado gratuitamente para uso com o intuito de ajudar as pessoas.\n\nPossivelmente se houver adesão a ferramenta adicionaremos novas cidades de acordo com a demanda e tempo.</string>
+	<string name="signature">Bruno Dias Silva\nGustavo Palazolo Eiras\nRafael Casadei\nRafael Caldas\nRicardo Silvino\n\nOrientador: Prof. Dr. Pier Marco Ricchetti</string>
+	<string name="signature1">Grupo:</string>	
     <string name="configuracao">Alterar Dados</string>
     <string name="tipo_sanguineo">Tipo Sanguineo</string>
     <string name="nome">Nome</string>
@@ -35,6 +36,7 @@
     <string name="muraltv">Você ainda não efetuou nenhuma doação :(</string>
     <string name="rankingtv">Ainda não há nenhum campeão :(</string>   
     <string name="doacoespendentestv">Você ainda não criou nenhuma doação  :(</string>   
+    <string name="informacoesUSJT">Universidade São Judas Tadeu\n4ASIN - 2014\nSI13M</string>   
     
 <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
